Adding big loft light widgets

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
             <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2061838/widgets/663463"></iframe>
         </section>
         <section id="small-loft-light">
-            <h2>Mały strych: swiatło</h2>
+            <h2>Mały strych: światło</h2>
             <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2101183/widgets/663470"></iframe>
             <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2101183/widgets/663471"></iframe>
-        </section>        
+        </section>  
+        <section id="big-loft-light">
+            <h2>Duży strych: światło</h2>
+            <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2178721/widgets/666393"></iframe>
+            <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2178721/widgets/666394"></iframe>
+        </section>      
     </body>
 </html>
